--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,11 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 762cc108b08b2fa86c1d7eb3430e860b28784574
-  ; popd
+- git clone --branch="meat-writeable-opt" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 762cc108b08b ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="master"
+- export PACKER_TEMPLATES_BRANCH="meat-writeable-opt"
 - "./packer-templates/bin/packer-build-script ci-connie"
 env:
   matrix:
