--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,12 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="meat-writeable-opt" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 762cc108b08b ; popd
+- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf d8634b626d786f73c9fd735c747e24455a6c88e3
+  ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="meat-writeable-opt"
+- export PACKER_TEMPLATES_BRANCH="master"
 - "./packer-templates/bin/packer-build-script ci-connie"
 env:
   matrix:
