--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf ec5e10327c2f ; popd
+- git clone --branch="meat-glx-fun" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 7343d907d4e5 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="master"
+- export PACKER_TEMPLATES_BRANCH="meat-glx-fun"
 - "./packer-templates/bin/packer-build-script ci-php"
 env:
   matrix:
