--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,11 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git fetch origin +refs/pull/253/merge && git checkout
-  -qf FETCH_HEAD ; popd
+- git clone --branch="meat-keyserver-switchy-deux" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 08bf374e2190 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="+refs/pull/253/merge"
+- export PACKER_TEMPLATES_BRANCH="meat-keyserver-switchy-deux"
 - "./packer-templates/bin/packer-build-script ci-garnet"
 env:
   matrix:
