--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf @ ; popd
+- git clone --branch="meat-job-board-register-cleanups" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 29efc7d66914 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="master"
+- export PACKER_TEMPLATES_BRANCH="meat-job-board-register-cleanups"
 - "./packer-templates/bin/packer-build-script ci-connie"
 env:
   matrix:
