--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,22 @@
+---
 language: generic
-
-script: echo nope
+dist: trusty
+group: edge
+sudo: true
+before_install:
+- if [[ "x${BUILDER}" = "xdocker" ]] ; then sudo apt-get update -yqq ; sudo apt-get
+  purge -o Dpkg::Options::="--force-confnew" -yqq docker-engine ; sudo apt-get install
+  -o Dpkg::Options::="--force-confnew" -yqq docker-engine lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
+  --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
+  docker restart ; fi
+install:
+- git clone --branch="meat-gce-bastion" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 3656a22ccd0d ; popd
+- "./packer-templates/bin/packer-build-install"
+script:
+- export PACKER_TEMPLATES_BRANCH="meat-gce-bastion"
+- "./packer-templates/bin/packer-build-script internal-nat"
+env:
+  matrix:
+  - BUILDER=amazon-ebs
+  - BUILDER=googlecompute
