--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,12 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="meat-postgresql-9.5-full-test" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf bae9e9c078dc ; popd
+- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git fetch origin +refs/pull/275/merge && git checkout
+  -qf FETCH_HEAD ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="meat-postgresql-9.5-full-test"
+- export PACKER_TEMPLATES_BRANCH="+refs/pull/275/merge"
 - "./packer-templates/bin/packer-build-script tmate-edge"
 env:
   matrix:
