--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,11 @@ dist: trusty
 group: edge
 sudo: true
 install:
-- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git fetch origin +refs/pull/276/merge && git checkout
-  -qf FETCH_HEAD ; popd
+- git clone --branch="meat-lil-worker-docker" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf cbc3700740d4 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="+refs/pull/276/merge"
+- export PACKER_TEMPLATES_BRANCH="meat-lil-worker-docker"
 - "./packer-templates/bin/packer-build-script internal-bastion"
 env:
   matrix:
