--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,12 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="meat-lil-worker-docker" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf a9a7324270e3 ; popd
+- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git fetch origin +refs/pull/276/merge && git checkout
+  -qf FETCH_HEAD ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="meat-lil-worker-docker"
+- export PACKER_TEMPLATES_BRANCH="+refs/pull/276/merge"
 - "./packer-templates/bin/packer-build-script tmate-edge"
 env:
   matrix:
