--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,11 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git fetch origin +refs/pull/276/merge && git checkout
-  -qf FETCH_HEAD ; popd
+- git clone --branch="meat-lil-worker-docker" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 445db543e7aa ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="+refs/pull/276/merge"
+- export PACKER_TEMPLATES_BRANCH="meat-lil-worker-docker"
 - "./packer-templates/bin/packer-build-script internal-nat"
 env:
   matrix:
