Install shellcheck 0.4.4 from S3 :tada: :bomb: commit-range=525f4cd3a6584f6cf65cf12aaf0dd8141387743c...15a51917d32734eef20aece9206a7b0437b1662c

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,12 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="meat-shellcheck-bump" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 8b1f08b026fd ; popd
+- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git fetch origin +refs/pull/285/merge && git checkout
+  -qf FETCH_HEAD ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="meat-shellcheck-bump"
+- export PACKER_TEMPLATES_BRANCH="+refs/pull/285/merge"
 - "./packer-templates/bin/packer-build-script internal-bastion"
 env:
   matrix:
