--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 4098b6a956c4 ; popd
+- git clone --branch="meat-internal-base-cleanups" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 8629de2db714 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="master"
+- export PACKER_TEMPLATES_BRANCH="meat-internal-base-cleanups"
 - "./packer-templates/bin/packer-build-script internal-bastion"
 env:
   matrix:
