--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,19 @@ before_install:
   docker restart ; fi
 install:
 - git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git fetch origin +refs/pull/313/merge && git checkout
+- pushd packer-templates && git fetch origin +refs/pull/317/merge && git checkout
   -qf FETCH_HEAD ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="+refs/pull/313/merge"
+- export PACKER_TEMPLATES_BRANCH="+refs/pull/317/merge"
 - "./packer-templates/bin/packer-build-script ci-connie"
+addons:
+  artifacts:
+    paths:
+    - ./tmp/image-metadata-$(cat "./tmp/%{template_name}/latest-image-name").tar.bz2
+    target_paths:
+    - travis-ci/packer-templates/%{template_name}/$(git describe --always --dirty
+      --tags)/$BUILDER
 env:
   matrix:
   - BUILDER=googlecompute
