Try out travis-packer-build's meat-body-tmpl-once branch :tada: :bomb: commit-range=f090dcd5e9a9c01de699e6dd34659613b12a9fe3...2b01d7cf698482d6ef751f002d47007a4a3e43f3

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,9 @@ script:
 addons:
   artifacts:
     paths:
-    - ./tmp/image-metadata-$(cat "./tmp/%{template_name}/latest-image-name").tar.bz2
+    - ./tmp/image-metadata-$(cat "./tmp/ci-connie/latest-image-name").tar.bz2
     target_paths:
-    - travis-ci/packer-templates/%{template_name}/$(git describe --always --dirty
-      --tags)/$BUILDER
+    - travis-ci/packer-templates/ci-connie/$(git describe --always --dirty --tags)/$BUILDER
 env:
   matrix:
   - BUILDER=googlecompute
