--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ script:
 addons:
   artifacts:
     paths:
-    - ./tmp/image-metadata-$(cat "./tmp/ci-connie/latest-image-name").tar.bz2
+    - "./tmp/image-metadata-$(cat ./tmp/ci-connie/latest-image-name).tar.bz2"
     target_paths:
     - travis-ci/packer-templates/ci-connie/$(git describe --always --dirty --tags)/$BUILDER
 env:
