--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,12 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="meat-worker-unregister-netdevice-whackamole" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 45bf1210aa62 ; popd
+- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git fetch origin +refs/pull/324/merge && git checkout
+  -qf FETCH_HEAD ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="meat-worker-unregister-netdevice-whackamole"
+- export PACKER_TEMPLATES_BRANCH="+refs/pull/324/merge"
 - "./packer-templates/bin/packer-build-script ci-garnet"
 env:
   matrix:
