--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="meat-trusty-mysql" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf f851a7ec31cd ; popd
+- git clone --branch="meat-sugilite-pypy" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 80f98d1c04e9 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="meat-trusty-mysql"
+- export PACKER_TEMPLATES_BRANCH="meat-sugilite-pypy"
 - "./packer-templates/bin/packer-build-script ci-sugilite"
 env:
   matrix:
