--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,11 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git fetch origin +refs/pull/337/merge && git checkout
-  -qf FETCH_HEAD ; popd
+- git clone --branch="meat-amethyst-java" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf ea5dac7aef04 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="+refs/pull/337/merge"
+- export PACKER_TEMPLATES_BRANCH="meat-amethyst-java"
 - "./packer-templates/bin/packer-build-script ci-amethyst"
 env:
   matrix:
