--- a/.travis.yml
+++ b/.travis.yml
@@ -10,18 +10,13 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="meat-node-attributes-export" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 3e372e45cce0 ; popd
+- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git fetch origin +refs/pull/341/merge && git checkout
+  -qf FETCH_HEAD ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="meat-node-attributes-export"
+- export PACKER_TEMPLATES_BRANCH="+refs/pull/341/merge"
 - "./packer-templates/bin/packer-build-script ci-garnet"
-addons:
-  artifacts:
-    paths:
-    - "./packer-templates/tmp/image-metadata-$(cat ./packer-templates/tmp/ci-garnet/latest-image-name).tar.bz2"
-    target_paths:
-    - travis-ci/packer-templates/ci-garnet/$BUILDER
 env:
   matrix:
   - BUILDER=googlecompute
