Switch from `man` to `man-db` install on precise docker stacks
and stub in an empty metadata tarball to appease the artifacts upload.
:tada: :bomb: commit-range=c509ec5648b2895c7a7962a42d1caca4bb3aba98...67ba169e03dc862e26b2f0cfad3cd46f95c86e76

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,12 @@ install:
 script:
 - export PACKER_TEMPLATES_BRANCH="+refs/pull/389/merge"
 - "./packer-templates/bin/packer-build-script ci-amethyst"
+- touch ./packer-templates/tmp/image-metadata-empty.tar.bz2
 addons:
   artifacts:
     paths:
-    - "./packer-templates/tmp/image-metadata-$(cat ./packer-templates/tmp/ci-amethyst/latest-image-name).tar.bz2"
+    - "./packer-templates/tmp/image-metadata-$(cat ./packer-templates/tmp/ci-amethyst/latest-image-name
+      || echo empty).tar.bz2"
     target_paths:
     - travis-ci/packer-templates/ci-amethyst/$BUILDER
 env:
