--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,12 @@ install:
 script:
 - export PACKER_TEMPLATES_BRANCH="+refs/pull/389/merge"
 - "./packer-templates/bin/packer-build-script tmate-edge"
+- touch ./packer-templates/tmp/image-metadata-empty.tar.bz2
 addons:
   artifacts:
     paths:
-    - "./packer-templates/tmp/image-metadata-$(cat ./packer-templates/tmp/tmate-edge/latest-image-name).tar.bz2"
+    - "./packer-templates/tmp/image-metadata-$(cat ./packer-templates/tmp/tmate-edge/latest-image-name
+      || echo empty).tar.bz2"
     target_paths:
     - travis-ci/packer-templates/tmate-edge/$BUILDER
 env:
