point to upstream cookbook branch :tada: :bomb: commit-range=02f441da68ef15bcdf8cc72eff7e89a691786329...cc78e1c0f32c5cd42fc6059698a0404302ed02b6

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,14 @@ before_install:
   -o Dpkg::Options::="--force-confnew" -yqq docker-engine lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
+- export TRAVIS_COOKBOOKS_BRANCH=cha-dev-trusty-q2
 install:
-- git clone --branch="cha-dev-trusty-Q2" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf ac5b2b45e476 ; popd
+- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git fetch origin +refs/pull/436/merge && git checkout
+  -qf FETCH_HEAD ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="cha-dev-trusty-Q2"
+- export PACKER_TEMPLATES_BRANCH="+refs/pull/436/merge"
 - "./packer-templates/bin/packer-build-script ci-sugilite"
 addons:
   artifacts:
