Switch to travis uid=2000 wheee :tada: :bomb: commit-range=7bd55be0675d...9403a6309f32

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,11 @@ before_install:
   docker restart ; fi
 - export TRAVIS_COOKBOOKS_BRANCH=meat-community-cookbook-updates
 install:
-- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git fetch origin +refs/pull/437/merge && git checkout
-  -qf FETCH_HEAD ; popd
+- git clone --branch="meat-cookiecat" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 9403a6309f32 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="+refs/pull/437/merge"
+- export PACKER_TEMPLATES_BRANCH="meat-cookiecat"
 - "./packer-templates/bin/packer-build-script ci-amethyst"
 addons:
   artifacts:
