GCE usernames != ubuntu :tada: :bomb: commit-range=20a54f7351fe...370faacd7853

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,25 @@ dist: trusty
 group: edge
 sudo: true
 before_install:
-- if [[ "x${BUILDER}" = "xdocker" ]] ; then sudo apt-get update -yqq ; sudo apt-get
+- if [[ "${BUILDER}" = "docker" ]] ; then sudo apt-get update -yqq ; sudo apt-get
   purge -o Dpkg::Options::="--force-confnew" -yqq docker-engine ; sudo apt-get install
   -o Dpkg::Options::="--force-confnew" -yqq docker-engine lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
+- export TRAVIS_COOKBOOKS_BRANCH=meat-community-cookbook-updates
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf ad78d08cbfef ; popd
+- git clone --branch="cha-dev-trusty-Q2" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 370faacd7853 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="master"
+- export PACKER_TEMPLATES_BRANCH="cha-dev-trusty-Q2"
 - "./packer-templates/bin/packer-build-script jupiter-brain"
+addons:
+  artifacts:
+    paths:
+    - image-metadata-$(cat .packer-build-image-name).tar.bz2
+    target_paths:
+    - travis-ci/packer-templates/jupiter-brain/$BUILDER
 env:
   matrix:
   - BUILDER=amazon-ebs
