omit pyenv, move upstream to basic.rb :tada: :bomb: commit-range=02f441da68ef15bcdf8cc72eff7e89a691786329...c00ba7e1cc5409935acfe30ca0cbbd796bad94db

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,12 @@ before_install:
   docker restart ; fi
 - export TRAVIS_COOKBOOKS_BRANCH=cha-meat-python
 install:
-- git clone --branch="cha-dev-trusty-Q2" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf c00ba7e1cc54 ; popd
+- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git fetch origin +refs/pull/436/merge && git checkout
+  -qf FETCH_HEAD ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="cha-dev-trusty-Q2"
+- export PACKER_TEMPLATES_BRANCH="+refs/pull/436/merge"
 - "./packer-templates/bin/packer-build-script ci-amethyst"
 addons:
   artifacts:
