Trigger test amethyst build :tada: :bomb: commit-range=3959693ab4de^...6d23a45ad69c

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf @ ; popd
+- git clone --branch="edmorley-rm-xenial-docker-override" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 6d23a45ad69c ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="master"
+- export PACKER_TEMPLATES_BRANCH="edmorley-rm-xenial-docker-override"
 - "./packer-templates/bin/packer-build-script ci-amethyst"
 addons:
   artifacts:
